apps/robot-shop/ratings/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ratings
  labels:
    service: ratings
  namespace: robot-shop
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    service: ratings
